crates/baml-bridge-derive/tests/ui/nested_unknown_key.rs
use baml_bridge_derive::BamlType;

#[derive(BamlType)]
struct NestedUnknownKey {
    #[render(nope = 1)]
    content: String,
}

fn main() {}
